# csv-parser

./: .gitignore  Cargo.toml  perf.data.old
benches/: burnt_large_csv.rs  just_read.rs  large_csv.rs
data/: test_no_whitespace.csv
examples/: main.rs
src/: error.rs  lib.rs  parser.rs  parser_iterator.rs  record.rs  records.rs
