[package]
name = "csv"
version = "0.1.0"
authors = ["rob-ng <rob.nate.grove@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
jestr = { path = "../jestr" }

[dev-dependencies]
criterion = "0.3"
burntcsv = {package = "csv", version = "1.1"}

[[bench]]
name = "large_csv"
harness = false

[[bench]]
name = "burnt_large_csv"
harness = false

[[bench]]
name = "just_read"
harness = false

[profile.release]
debug = true